# chocopy

./: .clang-format  .gitignore  CMakeLists.txt  ChocoPy.cpp  README.md  chocopy.cc
.devcontainer/: Dockerfile  devcontainer.json
chocopy/lexer/: lexer.h
include/: AST.h  CodeGen.h  Lexer.h  Parser.h  SemanticCheck.h  Token.h  lexer.h  parser.h  token.h
scripts/: ir-to-binary.sh
src/: CodeGen.cpp  SemanticCheck.cpp
tests/: choco.py
tests/parse/: def_func_nested.py
unittests/Lexer/: CMakeLists.txt  LexerTest.cpp
unittests/Parser/: CMakeLists.txt  ParserTest.cpp
